# hmcts-backend-solution

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml  run_asgi.sh
src/: config.ini  db_interface.py  gateway.py  task_def.py
