[project]
name = "HMCTS-Backend"
version = "0.1.0"
description = "HMCTS Backend Assignment"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "fastapi>=0.115.12",
    "mysql-connector-python>=9.3.0",
    "polars>=1.27.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0",
]
